[gd_scene load_steps=6 format=2]

[ext_resource path="res://sounds/pickup_sound.wav" type="AudioStream" id=1]
[ext_resource path="res://scripts/pickup.gd" type="Script" id=2]
[ext_resource path="res://sounds/pickup_picked.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.1776, 20.4708 )

[node name="pickups" type="Area2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -19.8649
margin_top = -19.8649
margin_right = 20.1351
margin_bottom = 20.1351
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = 8.854
max_distance = 1000.0
attenuation = 3.86374

[node name="sound_play" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="collected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="pickups" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickups"]
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_pickups_body_entered"]
[connection signal="timeout" from="sound_play" to="." method="_on_sound_timeout"]
[connection signal="finished" from="collected" to="." method="_on_collected_finished"]
